[gd_scene load_steps=11 format=2]

[ext_resource path="res://Backgrounds/kitchen_layout_a_plateandbox_static.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ReturnBut.gd" type="Script" id=2]
[ext_resource path="res://Assets/bread.png" type="Texture" id=3]
[ext_resource path="res://Assets/tomato.png" type="Texture" id=5]
[ext_resource path="res://Scripts/BuildSandwich.gd" type="Script" id=6]
[ext_resource path="res://Assets/cheesy.png" type="Texture" id=7]
[ext_resource path="res://Assets/onion.png" type="Texture" id=8]
[ext_resource path="res://Assets/lettuce.png" type="Texture" id=9]
[ext_resource path="res://Assets/Ham.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 168, 208 )

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="kitchen_layout_a_plateandbox_static" type="Sprite" parent="."]
position = Vector2( 512, 294 )
scale = Vector2( 0.533333, 0.537037 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ReturnBut" type="Button" parent="."]
margin_left = 880.0
margin_top = 16.0
margin_right = 1003.0
margin_bottom = 36.0
text = "Return to Kitchen"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SandwichBuilder" type="StaticBody2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SandwichBuilder"]
position = Vector2( 504, 280 )
shape = SubResource( 2 )

[node name="BaseBread" type="Sprite" parent="SandwichBuilder"]
position = Vector2( 504, 464 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Sandwich Buttons" type="Node" parent="."]

[node name="Bread" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 80.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cheese" type="Button" parent="Sandwich Buttons"]
margin_left = 160.0
margin_top = 56.0
margin_right = 232.0
margin_bottom = 80.0
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ham" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 112.0
margin_right = 128.0
margin_bottom = 136.0
icon = ExtResource( 10 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lettuce" type="Button" parent="Sandwich Buttons"]
margin_left = 160.0
margin_top = 112.0
margin_right = 232.0
margin_bottom = 136.0
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onion" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 176.0
margin_right = 128.0
margin_bottom = 200.0
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tomato" type="Button" parent="Sandwich Buttons"]
margin_left = 160.0
margin_top = 176.0
margin_right = 232.0
margin_bottom = 200.0
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ReturnBut" to="ReturnBut" method="_on_ReturnBut_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Bread" to="SandwichBuilder" method="_on_Bread_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Cheese" to="SandwichBuilder" method="_on_Cheese_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Ham" to="SandwichBuilder" method="_on_Ham_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Lettuce" to="SandwichBuilder" method="_on_Lettuce_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Onion" to="SandwichBuilder" method="_on_Onion_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Tomato" to="SandwichBuilder" method="_on_Tomato_pressed"]
